vps3/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### limit tcp 22 0.0.0.0/0 any 0.0.0.0/0 in comment=726174652d6c696d697420737368
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 22 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 22 -j ufw-user-limit-accept

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in comment=68747470
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in comment=6874747073
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 5432 0.0.0.0/0 any 203.0.113.11 in comment=706f7374677265732066726f6d2076707331
-A ufw-user-input -p tcp --dport 5432 -s 203.0.113.11 -j ACCEPT

### tuple ### allow tcp 9000 0.0.0.0/0 any 203.0.113.11 in comment=6d696e696f2066726f6d2076707331
-A ufw-user-input -p tcp --dport 9000 -s 203.0.113.11 -j ACCEPT

### tuple ### allow tcp 9001 0.0.0.0/0 any 203.0.113.11 in comment=6d696e696f20636f6e736f6c652066726f6d2076707331
-A ufw-user-input -p tcp --dport 9001 -s 203.0.113.11 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 198.51.100.200 in comment=6f7263686573747261746f722070657273697374656e742074756e6e656c
-A ufw-user-input -p tcp --dport 22 -s 198.51.100.200 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
